--- a/recipereveletion/src/pages/Halaman.css
+++ b/recipereveletion/src/pages/Halaman.css
@@ -65,4 +65,21 @@
   background-color: #0056b3;
 }
 
+.result-box {
+  background-color: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: block;
+  overflow: hidden;
+  clear: both;
+  color: black; 
+}
+ 
+.creating-recipe {
+  margin-top: 20px;
+}
+
   
