perbaikan simpan dan pembuatan fitur istilah

--- a/recipereveletion/src/pages/Halaman.css
+++ b/recipereveletion/src/pages/Halaman.css
@@ -75,11 +75,22 @@
   display: block;
   overflow: hidden;
   clear: both;
-  color: black; 
+  color: black; /* Menambahkan properti untuk warna teks menjadi hitam */
 }
  
 .creating-recipe {
   margin-top: 20px;
 }
 
+
+@keyframes dropTop {
+  0% {
+    transform: translateY(-100%) scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%) scale(1);
+    opacity: 1;
+  }
+}
   
